practice/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: dev
  name: mypod1
spec:
  containers:
  - image: nginx
    name: c1
  restartPolicy: Always
