practice/remove_labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test1
spec:
  rules:
  - name: test1
    match:
      resources:
        kinds: 
        - Deployment
        selector:
          matchLabels:
            cert: apply
    mutate:
      patchesJson6902: |-
        - path: "/metadata/labels/app"
          op: remove
