practice/restrict-image-restries.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-namespace-image-registries
spec:
  background: false
  validationFailureAction: enforce
  rules:
  - name: deny-user-registry-docker.io
    match:
      resources:
        kinds:
        - Pod
    exclude:
      clusterRoles:
        - cluster-admin
    validate:
      message: "registries docker.io is not allowed for this user."
      pattern:
        spec:
          containers:
            - image: "!docker.io/*"
  - name: deny-namespace-registry-docker.io
    match:
      resources:
        kinds:
        - Pod
    exclude:
      resources:
        namespaces:
          - "kube-*"
    validate:
      message: "registries docker.io is not allowed in this namespace."
      pattern:
        spec:
          containers:
            - image: "!docker.io/*"
